best-practices-cel/require-drop-cap-net-raw/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: drop-good
spec:
  initContainers:
  - name: init
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        drop: ["CAP_NET_RAW"]
  containers:
  - name: add-capabilities
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        drop: ["CAP_NET_RAW"]
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
spec:
  initContainers:
  - name: init
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        drop: ["CAP_NET_RAW"]
  containers:
  - name: add-capabilities
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        drop: ["CAP_CHOWN"]
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod02
spec:
  containers:
  - name: add-capabilities
    image: gcr.io/google-samples/node-hello:1.0
